Fix: Added try-catch to handle exceptions from endpoint to database operations.