@@ -9,6 +9,7 @@ import com.akb.chit_fund.repository.UserRepository;
 import jakarta.transaction.Transactional;
 import jakarta.validation.constraints.NotBlank;
 import jakarta.validation.constraints.NotNull;
+import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
@@ -32,43 +33,101 @@ public class SchemaService {
 
     @Transactional
     public SchemaDTO createSchema(SchemaDTO schema) {
-        LOG.info("Creating schema with name: {}",schema.getSchemaName());
-        Schema schema1 = new Schema();
-        schema1.setDescription(schema.getDescription());
-        schema1.setName(schema.getSchemaName());
-        schema1.setDurationInMonths(schema.getDurationInMonths());
-        schema1.setMonthlyContribution(schema.getMonthlyContribution());
-        schemaRepo.save(schema1);
-        LOG.info("Schema created successfully with id: {}",schema1.getId());
-        return schema;
+        try {
+            LOG.info("Creating schema with name: {}", schema.getSchemaName());
+            Schema schema1 = new Schema();
+            schema1.setDescription(schema.getDescription());
+            schema1.setName(schema.getSchemaName());
+            schema1.setDurationInMonths(schema.getDurationInMonths());
+            schema1.setMonthlyContribution(schema.getMonthlyContribution());
+            schemaRepo.save(schema1);
+            LOG.info("Schema created successfully with id: {}", schema1.getId());
+            return schema;
+        } catch (Exception e) {
+            LOG.error("Error creating schema: {}", e.getMessage());
+            throw new RuntimeException(e);
+        }
     }
 
 
     @Transactional
     public SchemaDTO addUserToSchema(long id, String mobileNumber, String userName) {
-        LOG.info("Adding user with mobile: {} to schemaId: {}",mobileNumber,id);
-        if(userName == null || userName.isBlank()){
-            throw new RuntimeException("User name cannot be empty");
+        try {
+            LOG.info("Adding user with mobile: {} to schemaId: {}", mobileNumber, id);
+            if (StringUtils.isBlank(userName)) {
+                throw new RuntimeException("User name cannot be empty");
+            }
+            Schema schema = schemaRepo.findById(id).orElseThrow(() -> new RuntimeException("No Such Schema Found"));
+
+            if (isUserAssociatedWithSchema(schema, mobileNumber))
+                throw new RuntimeException(" User already present in the Schema");
+
+            User user = userRepo.findById(mobileNumber).isPresent() ?
+                    userRepo.findById(mobileNumber).get() : userService.registerUser(mobileNumber, null, userName, Role.USER);
+
+            schema.getUsers().add(user);
+            user.getSchemas().add(schema);
+            userRepo.save(user);
+            schemaRepo.save(schema);
+            LOG.info("User with Mobile number :{} added to schemaId: {} successfully", mobileNumber, id);
+            return createDTO(schema);
+        } catch (Exception e) {
+            LOG.error("Error while adding user to schema: {}", e.getMessage());
+            throw new RuntimeException(e);
         }
-        Schema schema = schemaRepo.findById(id).orElseThrow(() -> new RuntimeException("No Such Schema Found"));
-        User user = null;
-
-        if (userRepo.findById(mobileNumber).isPresent()) {
-            user = userRepo.findById(mobileNumber).get();
-        } else {
-            user = userService.registerUser(mobileNumber, null, userName, Role.USER);
-        }
-
-        if (isUserAssociatedWithSchema(schema, mobileNumber))
-            throw new RuntimeException(" User already present in the Schema");
-
-        schema.getUsers().add(user);
-        user.getSchemas().add(schema);
-        userRepo.save(user);
-        schemaRepo.save(schema);
-        LOG.info("User with Mobile number :{} added to schemaId: {} successfully",mobileNumber,id);
-        return createDTO(schema);
     }
+
+
+    public String removeSchema(@NotNull long schemaId) {
+        try {
+            LOG.info("Removing schema with id: {}", schemaId);
+            Schema schema = schemaRepo.findById(schemaId).orElseThrow(() -> new RuntimeException("No Such Schema Found"));
+            for (User user : schema.getUsers()) {
+                user.getSchemas().remove(schema);
+                userRepo.save(user);
+            }
+            schemaRepo.delete(schema);
+            LOG.info("Schema with id: {} removed successfully", schemaId);
+            return "Schema removed Successfully";
+        } catch (Exception e) {
+            LOG.error("Error while removing schema: {}", e.getMessage());
+            throw new RuntimeException(e);
+        }
+    }
+
+
+    public String removeUserFromSchema(@NotNull long schemaId, @NotBlank String mobileNumber) {
+        try {
+            LOG.info("Removing user with mobile: {} from schemaId: {}", mobileNumber, schemaId);
+            Schema schema = schemaRepo.findById(schemaId).orElseThrow(() -> new RuntimeException("No Such Schema Found"));
+            User user = userRepo.findById(mobileNumber).orElseThrow(() -> new RuntimeException("No Such User Found"));
+
+            if (!isUserAssociatedWithSchema(schema, mobileNumber))
+                throw new RuntimeException(" User not associated with the Schema");
+
+            schema.getUsers().remove(user);
+            user.getSchemas().remove(schema);
+            userRepo.save(user);
+            schemaRepo.save(schema);
+            LOG.info("User with Mobile number :{} removed from schemaId: {} successfully", mobileNumber, schemaId);
+            return "User removed from Schema Successfully";
+        } catch (Exception e) {
+            LOG.error("Error while removing user from schema: {}", e.getMessage());
+            throw new RuntimeException(e);
+        }
+    }
+
+
+    public List<Schema> getAllSchemas() {
+        try {
+            LOG.info("Retrieve all Schemas");
+            return schemaRepo.findAll();
+        } catch (Exception e) {
+            LOG.error("Error while retrieving schemas: {}", e.getMessage());
+            throw new RuntimeException(e);
+        }
+    }
+
 
     private SchemaDTO createDTO(Schema schema) {
         SchemaDTO schemaDTO = new SchemaDTO();
@@ -80,38 +139,6 @@ public class SchemaService {
         return schemaDTO;
     }
 
-    public String removeSchema(@NotNull long schemaId) {
-        LOG.info("Removing schema with id: {}",schemaId);
-        Schema schema = schemaRepo.findById(schemaId).orElseThrow(() -> new RuntimeException("No Such Schema Found"));
-        for (User user : schema.getUsers()) {
-            user.getSchemas().remove(schema);
-            userRepo.save(user);
-        }
-        schemaRepo.delete(schema);
-        LOG.info("Schema with id: {} removed successfully",schemaId);
-        return "Schema removed Successfully";
-    }
-
-    public String removeUserFromSchema(@NotNull long schemaId, @NotBlank String mobileNumber) {
-        LOG.info("Removing user with mobile: {} from schemaId: {}",mobileNumber,schemaId);
-        Schema schema = schemaRepo.findById(schemaId).orElseThrow(() -> new RuntimeException("No Such Schema Found"));
-        User user = userRepo.findById(mobileNumber).orElseThrow(() -> new RuntimeException("No Such User Found"));
-
-        if (!isUserAssociatedWithSchema(schema, mobileNumber))
-            throw new RuntimeException(" User not associated with the Schema");
-
-        schema.getUsers().remove(user);
-        user.getSchemas().remove(schema);
-        userRepo.save(user);
-        schemaRepo.save(schema);
-        LOG.info("User with Mobile number :{} removed from schemaId: {} successfully",mobileNumber,schemaId);
-        return "User removed from Schema Successfully";
-    }
-
-    public List<Schema> getAllSchemas() {
-        LOG.info("Retrieve all Schemas");
-        return schemaRepo.findAll();
-    }
 
     private boolean isUserAssociatedWithSchema(Schema schema, String mobileNumber){
         return schema.getUsers().stream()
